test/tests/bad/undef-ctor.carth
;; UndefCtor

(def undef-ctor ThisCtorIsUndefined)
